apps/littlelink/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: littlelink
  labels:
    cert-manager-tls: littlelink
