apps/littlelink/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: littlelink-server
  labels:
    app.kubernetes.io/name: littlelink-server
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: littlelink-server

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: littlelink-server
  labels:
    app.kubernetes.io/name: littlelink-server
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: littlelink-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: littlelink-server
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: littlelink-server
          image: "ghcr.io/techno-tim/littlelink-server:latest"
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
