apps/littlelink/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: littlelink-server
  labels:
    app.kubernetes.io/name: littlelink-server
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: littlelink-server
